--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha --recursive",
+    "test": "tsc -p . && mocha --recursive",
     "start": "node ./app.js",
     "build": "tsc -p ."
   },
@@ -25,7 +25,8 @@
     "morgan": "~1.6.1",
     "request": "^2.74.0",
     "request-promise-native": "^1.0.3",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "typescript": "^2.4.2"
   },
   "devDependencies": {
     "@types/assert": "0.0.31",
