--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -p ."
   },
   "dependencies": {
+    "@types/js-yaml": "^3.9.0",
     "async": "~1.5.2",
     "bcrypt": "^0.8.5",
     "body-parser": "^1.17.1",
@@ -18,6 +19,7 @@
     "express": "~4.13.1",
     "fcm": "^1.0.3",
     "jade": "~1.11.0",
+    "js-yaml": "^3.9.1",
     "jsonwebtoken": "~5.5.0",
     "kerberos": "0.0.21",
     "lodash": "^3.10.1",
@@ -42,7 +44,7 @@
     "@types/mongoose": "^4.7.2",
     "@types/morgan": "^1.7.32",
     "@types/node": "^6.0.55",
-    "@types/request": "0.0.38",
+    "@types/request": "^2.0.0",
     "mocha": "~2.4.5",
     "supertest": "~1.2.0",
     "typescript": "^2.1.4"
