--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "test": "tsc -p . && mocha --recursive",
     "start": "node ./app.js",
     "build": "tsc -p .",
-    "api-key": "node config/apiKey list"
+    "api-key": "node config/apiKey list",
+    "init-coursebook": ""
   },
   "dependencies": {
     "@types/js-yaml": "^3.9.0",
+    "@types/xlsx": "0.0.34",
     "async": "~1.5.2",
     "bcrypt": "^0.8.5",
     "body-parser": "^1.17.1",
@@ -29,7 +31,8 @@
     "request": "^2.74.0",
     "request-promise-native": "^1.0.3",
     "serve-favicon": "~2.3.0",
-    "typescript": "^2.4.2"
+    "typescript": "^2.4.2",
+    "xlsx": "^0.11.2"
   },
   "devDependencies": {
     "@types/assert": "0.0.31",
