--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "test": "tsc -p . && mocha --recursive",
     "start": "node ./app.js",
     "build": "tsc -p .",
-    "api-key": "node config/apiKey list",
-    "init-coursebook": ""
+    "apikey": "node config/apiKey list",
+    "coursebook": "node batch/coursebook/main"
   },
   "dependencies": {
     "@types/iconv": "^2.1.15",
@@ -18,20 +18,14 @@
     "bcrypt": "^0.8.5",
     "body-parser": "^1.17.1",
     "cookie-parser": "~1.3.5",
-    "cors": "^2.7.1",
     "debug": "~2.2.0",
-    "ejs": "~2.3.4",
+    "ejs": "^2.5.7",
     "express": "~4.13.1",
-    "fcm": "^1.0.3",
-    "iconv": "^2.3.0",
-    "jade": "~1.11.0",
     "js-yaml": "^3.9.1",
     "jsonwebtoken": "~5.5.0",
-    "kerberos": "0.0.21",
-    "lodash": "^3.10.1",
     "log4js": "^2.3.3",
     "mongoose": "4.7.2",
-    "morgan": "~1.6.1",
+    "morgan": "^1.8.2",
     "request": "^2.74.0",
     "request-promise-native": "^1.0.3",
     "serve-favicon": "~2.3.0",
