--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^0.8.5",
     "body-parser": "^1.17.1",
     "cookie-parser": "~1.3.5",
+    "cors": "^2.8.4",
     "debug": "~2.2.0",
     "ejs": "^2.5.7",
     "express": "~4.13.1",
