--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "debug": "~2.2.0",
     "ejs": "^2.5.7",
     "express": "~4.13.1",
+    "immutable": "^3.8.1",
     "js-yaml": "^3.9.1",
     "jsonwebtoken": "~5.5.0",
     "lodash": "^4.17.4",
