--- a/package.json
+++ b/package.json
@@ -3,15 +3,28 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "test": "tsc -p . && mocha --recursive",
+    "test": "tsc -p . && mocha --recursive --timeout 10000",
     "start": "node ./app.js",
     "build": "tsc -p .",
     "apikey": "node config/apiKey list",
     "coursebook": "node batch/coursebook/main"
   },
   "dependencies": {
-    "@types/iconv": "^2.1.15",
+    "@types/assert": "0.0.31",
+    "@types/async": "^2.0.37",
+    "@types/bcrypt": "^1.0.0",
+    "@types/body-parser": "0.0.33",
+    "@types/cookie-parser": "^1.3.30",
+    "@types/cors": "0.0.33",
+    "@types/express": "^4.0.34",
     "@types/js-yaml": "^3.9.0",
+    "@types/jsonwebtoken": "^7.2.0",
+    "@types/lodash": "^4.14.45",
+    "@types/mocha": "^2.2.35",
+    "@types/mongoose": "^4.7.2",
+    "@types/morgan": "^1.7.32",
+    "@types/node": "^6.0.55",
+    "@types/request": "^2.0.0",
     "@types/request-promise-native": "^1.0.6",
     "@types/xlsx": "0.0.34",
     "async": "~1.5.2",
@@ -27,31 +40,15 @@
     "jsonwebtoken": "~5.5.0",
     "lodash": "^4.17.4",
     "log4js": "^2.3.3",
+    "mocha": "~2.4.5",
     "mongoose": "4.7.2",
     "morgan": "^1.8.2",
     "request": "^2.74.0",
     "request-promise-native": "^1.0.3",
     "serve-favicon": "~2.3.0",
+    "supertest": "~1.2.0",
+    "ts-loader": "^2.3.7",
     "typescript": "^2.4.2",
     "xlsx": "^0.11.2"
-  },
-  "devDependencies": {
-    "@types/assert": "0.0.31",
-    "@types/async": "^2.0.37",
-    "@types/bcrypt": "^1.0.0",
-    "@types/body-parser": "0.0.33",
-    "@types/cookie-parser": "^1.3.30",
-    "@types/cors": "0.0.33",
-    "@types/express": "^4.0.34",
-    "@types/jsonwebtoken": "^7.2.0",
-    "@types/lodash": "^4.14.45",
-    "@types/mocha": "^2.2.35",
-    "@types/mongoose": "^4.7.2",
-    "@types/morgan": "^1.7.32",
-    "@types/node": "^6.0.55",
-    "@types/request": "^2.0.0",
-    "mocha": "~2.4.5",
-    "supertest": "~1.2.0",
-    "typescript": "^2.1.4"
   }
 }
