--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "lodash": "^4.17.4",
     "log4js": "^2.3.3",
     "mocha": "~2.4.5",
-    "mongodb": "^2.2.33",
-    "mongoose": "4.7.2",
+    "mongodb": "^3.0.1",
+    "mongoose": "^5.0.0-rc0",
     "morgan": "^1.8.2",
     "request": "^2.74.0",
     "request-promise-native": "^1.0.3",
