--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "cors": "^2.8.4",
     "debug": "~2.2.0",
     "ejs": "^2.5.7",
-    "express": "~4.13.1",
+    "express": "^4.16.2",
     "immutable": "^3.8.1",
     "js-yaml": "^3.9.1",
     "jsonwebtoken": "~5.5.0",
