--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,15 @@
         "module": "commonjs",
         "target": "es2016",
         "noImplicitAny": false,
-        "sourceMap": false
-    }
+        "sourceMap": true,
+        "baseUrl": "./",
+        "outDir": "./dist",
+        "paths": {
+            "core/*": ["src/core/*"]
+        }
+    },
+    "exclude": [
+        "node_modules",
+        "dist"
+    ]
 }
