--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "2.0.1",
   "private": true,
   "scripts": {
-    "test": "tsc -p . && tspath -f --jsPath ./dist && mocha",
+    "test": "tsc -p . && mocha -r tsconfig-paths/register",
     "start": "node ./api/app.js",
-    "build": "tsc -p . && tspath -f --jsPath ./dist",
+    "build": "tsc -p .",
     "apikey": "node config/apiKey list",
     "coursebook": "node batch/coursebook/main",
     "prune_log": "node batch/prune_log/main",
@@ -50,7 +50,7 @@
     "request-promise-native": "^1.0.3",
     "serve-favicon": "~2.3.0",
     "supertest": "~1.2.0",
-    "tspath": "^1.2.10",
+    "tsconfig-paths": "^3.1.1",
     "typescript": "^2.4.2",
     "xlsx": "^0.11.2"
   }
