--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "request-promise-native": "^1.0.3",
     "serve-favicon": "~2.3.0",
     "supertest": "~1.2.0",
-    "typescript": "^2.4.2",
+    "typescript": "~2.6.2",
     "xlsx": "^0.11.2"
   },
   "_moduleAliases": {
