--- a/package.json
+++ b/package.json
@@ -44,14 +44,14 @@
     "log4js": "^2.3.3",
     "mocha": "~2.4.5",
     "module-alias": "^2.0.3",
-    "mongodb": "^3.0.1",
-    "mongoose": "^5.0.0-rc0",
+    "mongodb": "3.0.1",
+    "mongoose": "5.0.0-rc0",
     "morgan": "^1.8.2",
     "request": "^2.74.0",
     "request-promise-native": "^1.0.3",
     "serve-favicon": "~2.3.0",
     "supertest": "~1.2.0",
-    "typescript": "^2.4.2",
+    "typescript": "2.9.1",
     "xlsx": "^0.11.2"
   },
   "_moduleAliases": {
