--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.4",
   "private": true,
   "scripts": {
-    "test": "tsc -p . && cp -R resources/* dist/ && mocha -r module-alias/register",
+    "test": "tsc -p . && cp -R resources/* dist/ && mocha --exit -r module-alias/register",
     "start": "node ./dist/api/app.js",
     "build": "tsc -p . && cp -R resources/* dist/",
     "apikey": "node ./dist/core/config/apiKey list",
@@ -41,8 +41,8 @@
     "js-yaml": "^3.9.1",
     "jsonwebtoken": "~5.5.0",
     "lodash": "^4.17.4",
-    "log4js": "^2.3.3",
-    "mocha": "~2.4.5",
+    "log4js": "2.8.0",
+    "mocha": "5.2.0",
     "module-alias": "^2.0.3",
     "mongodb": "3.0.1",
     "mongoose": "5.0.0-rc0",
