--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@types/assert": "0.0.31",
     "@types/async": "^2.0.37",
-    "@types/bcrypt": "^1.0.0",
+    "@types/bcrypt": "~2.0.0",
     "@types/body-parser": "0.0.33",
     "@types/cookie-parser": "^1.3.30",
     "@types/cors": "0.0.33",
@@ -30,7 +30,7 @@
     "@types/request-promise-native": "^1.0.6",
     "@types/xlsx": "0.0.34",
     "async": "~1.5.2",
-    "bcrypt": "^0.8.5",
+    "bcrypt": "2.0.1",
     "body-parser": "^1.17.1",
     "cookie-parser": "~1.3.5",
     "cors": "^2.8.4",
