--- a/package.json
+++ b/package.json
@@ -12,39 +12,38 @@
     "feedback2github": "node ./dist/batch/feedback2github"
   },
   "dependencies": {
+    "@types/async": "~2.0.49",
     "@types/bcrypt": "~2.0.0",
     "@types/express": "^4.0.34",
-    "@types/js-yaml": "^3.9.0",
+    "@types/js-yaml": "~3.11.0",
     "@types/jsonwebtoken": "^7.2.0",
     "@types/mocha": "^2.2.35",
     "@types/mongoose": "^4.7.2",
     "@types/morgan": "^1.7.32",
     "@types/node": "^6.0.55",
     "@types/request": "^2.0.0",
-    "@types/request-promise-native": "^1.0.6",
-    "@types/xlsx": "0.0.34",
-    "bcrypt": "2.0.1",
-    "body-parser": "^1.17.1",
-    "cookie-parser": "~1.3.5",
-    "cors": "^2.8.4",
-    "debug": "~2.2.0",
-    "ejs": "^2.5.7",
-    "express": "^4.16.2",
-    "immutable": "^3.8.1",
-    "js-yaml": "^3.9.1",
+    "@types/request-promise-native": "~1.0.6",
+    "async": "~2.0.1",
+    "bcrypt": "~2.0.1",
+    "body-parser": "~1.18.3",
+    "cookie-parser": "~1.4.3",
+    "cors": "~2.8.4",
+    "ejs": "~2.6.1",
+    "express": "~4.16.3",
+    "immutable": "~3.8.2",
+    "js-yaml": "~3.11.0",
     "jsonwebtoken": "~5.5.0",
-    "log4js": "2.8.0",
-    "mocha": "5.2.0",
-    "module-alias": "^2.0.3",
-    "mongodb": "3.0.1",
-    "mongoose": "5.0.0-rc0",
-    "morgan": "^1.8.2",
+    "log4js": "~2.8.0",
+    "mocha": "~5.2.0",
+    "module-alias": "~2.0.6",
+    "mongodb": "~3.0.10",
+    "mongoose": "~5.0.0",
+    "morgan": "~1.9.0",
     "request": "^2.74.0",
-    "request-promise-native": "^1.0.3",
-    "serve-favicon": "~2.3.0",
-    "supertest": "~1.2.0",
+    "request-promise-native": "~1.0.5",
+    "supertest": "~3.1.0",
     "typescript": "2.9.1",
-    "xlsx": "^0.11.2"
+    "xlsx": "~0.13.0"
   },
   "_moduleAliases": {
     "core": "dist/core"
