--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,14 @@
         "target": "es2016",
         "noImplicitAny": false,
         "sourceMap": true,
-        "outDir": "./dist",
+        "outDir": "./build",
         "baseUrl": "./src",
         "paths": {
-            "core/*": ["core/*"]
+            "@app/*": [ "*" ]
         }
     },
     "exclude": [
         "node_modules",
-        "dist"
+        "build"
     ]
 }
