--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "immutable": "~3.8.2",
     "js-yaml": "~3.11.0",
     "jsonwebtoken": "~5.5.0",
-    "log4js": "~2.8.0",
+    "log4js": "^2.11.0",
     "mocha": "~5.2.0",
     "module-alias": "^2.0.6",
     "mongodb": "~3.0.10",
