--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^6.0.55",
     "@types/request": "^2.0.0",
     "@types/request-promise-native": "~1.0.6",
+    "@types/sinon": "^5.0.1",
     "async": "~2.0.1",
     "bcrypt": "~2.0.1",
     "body-parser": "~1.18.3",
@@ -41,6 +42,7 @@
     "morgan": "~1.9.0",
     "request": "^2.74.0",
     "request-promise-native": "~1.0.5",
+    "sinon": "^6.1.3",
     "supertest": "~3.1.0",
     "typescript": "2.9.1",
     "xlsx": "~0.13.0"
