--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^6.0.55",
     "@types/request": "^2.0.0",
     "@types/request-promise-native": "~1.0.6",
+    "@types/rewire": "^2.5.28",
     "@types/sinon": "^5.0.1",
     "async": "~2.0.1",
     "bcrypt": "~2.0.1",
@@ -42,6 +43,7 @@
     "morgan": "~1.9.0",
     "request": "^2.74.0",
     "request-promise-native": "~1.0.5",
+    "rewire": "^4.0.1",
     "sinon": "^6.1.3",
     "supertest": "~3.1.0",
     "typescript": "2.9.1",
