--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/request-promise-native": "~1.0.6",
     "@types/rewire": "^2.5.28",
     "@types/sinon": "^5.0.1",
+    "assert-rejects": "^0.1.1",
     "async": "~2.0.1",
     "bcrypt": "~2.0.1",
     "body-parser": "~1.18.3",
