--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "snutt",
-  "version": "2.0.5-dev",
+  "version": "2.0.6",
   "private": true,
   "scripts": {
     "test": "tsc -p . && cp -R resources/* build/ && mocha -r module-alias/register --exit \"build/test/**/*.js\"",
