--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mongodb": "~3.0.10",
     "mongoose": "~5.0.0",
     "morgan": "~1.9.0",
+    "redis": "^2.8.0",
     "request": "^2.74.0",
     "request-promise-native": "~1.0.5",
     "rewire": "^4.0.1",
