--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/async": "~2.0.49",
     "@types/bcrypt": "~2.0.0",
     "@types/express": "^4.0.34",
+    "@types/express-promise-router": "^2.0.0",
     "@types/js-yaml": "~3.11.0",
     "@types/jsonwebtoken": "^7.2.0",
     "@types/mocha": "^2.2.35",
@@ -34,6 +35,7 @@
     "cors": "~2.8.4",
     "ejs": "~2.6.1",
     "express": "~4.16.3",
+    "express-promise-router": "^3.0.3",
     "immutable": "~3.8.2",
     "js-yaml": "~3.11.0",
     "jsonwebtoken": "~5.5.0",
