--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "mongodb": "~3.0.10",
     "mongoose": "~5.0.0",
     "morgan": "~1.9.0",
+    "nightmare": "^3.0.1",
     "redis": "^2.8.0",
     "request": "^2.74.0",
     "request-promise-native": "~1.0.5",
