--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@types/async": "~2.0.49",
+    "@types/async-lock": "^1.1.0",
     "@types/bcrypt": "~2.0.0",
     "@types/express": "^4.0.34",
     "@types/express-promise-router": "^2.0.0",
@@ -29,6 +30,7 @@
     "@types/sinon": "^5.0.1",
     "assert-rejects": "^0.1.1",
     "async": "~2.0.1",
+    "async-lock": "^1.1.3",
     "bcrypt": "~2.0.1",
     "body-parser": "~1.18.3",
     "cookie-parser": "~1.4.3",
