--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.3",
     "express-promise-router": "^3.0.3",
+    "express-react-views": "^0.10.5",
     "immutable": "~3.8.2",
     "js-yaml": "~3.11.0",
     "jsonwebtoken": "~5.5.0",
@@ -48,6 +49,9 @@
     "mongoose": "~5.0.0",
     "morgan": "~1.9.0",
     "nightmare": "^3.0.1",
+    "node-sass": "^4.9.4",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "redis": "^2.8.0",
     "request": "^2.74.0",
     "request-promise-native": "~1.0.5",
