--- a/snutt.yml.example
+++ b/snutt.yml.example
@@ -1,16 +1,31 @@
-secretKey: test
-host: localhost
-port: 3000
-email: snutt@wafflestudio.com
-mongo:
-  uri: mongodb://localhost/snutt
-redis:
-  port: 6379
-fcm:
-  apiKey: testapikey
-  projectId: testprojectid
-feedback2github:
-  token: testapikey
-  repo:
-    owner: wafflestudio
-    name: snutt-feedbacks
+core:
+  secretKey: test
+  email: snutt@wafflestudio.com
+  mongo:
+    uri: mongodb://localhost/snutt
+  redis:
+    port: 6379
+  fcm:
+    apiKey: testapikey
+    projectId: testprojectid
+
+api:
+  host: localhost
+  port: 3000
+  log4js:
+    path: './snutt-api.log'
+    pattern: '.yyyy-MM-dd'
+    daysToKeep: 30,
+    logLevel: debug
+
+batch:
+  log4js:
+    path: './snutt-batch.log'
+    pattern: '.yyyy-MM-dd'
+    daysToKeep: 30,
+    logLevel: debug
+  feedback2github:
+    token: testapikey
+    repo:
+      owner: wafflestudio
+      name: snutt-feedbacks
