--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "request-promise-native": "~1.0.5",
     "rewire": "^4.0.1",
     "sinon": "^6.1.3",
+    "streamroller": "^0.8.5",
     "supertest": "~3.1.0",
     "typescript": "2.9.1",
     "xlsx": "~0.13.0"
