--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "streamroller": "^0.8.5",
     "supertest": "~3.1.0",
     "typescript": "2.9.1",
+    "winston": "^3.2.0",
     "xlsx": "~0.13.0"
   },
   "_moduleAliases": {
