Update dependencies and fix log config

--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "mocha": "~5.2.0",
     "module-alias": "^2.0.6",
     "mongodb": "~3.0.10",
-    "mongoose": "~5.0.0",
-    "morgan": "~1.9.0",
+    "mongoose": "^5.0.18",
+    "morgan": "^1.9.1",
     "redis": "^2.8.0",
     "request": "^2.74.0",
     "request-promise-native": "~1.0.5",
