--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/supertest": "^2.0.7",
     "assert-rejects": "^0.1.1",
     "async": "~2.0.1",
+    "async-retry": "^1.3.1",
     "bcrypt": "~2.0.1",
     "body-parser": "~1.18.3",
     "cookie-parser": "~1.4.3",
