--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "test": "tsc -p . && cp -R resources/* build/ && mocha -r module-alias/register --exit \"build/test/**/*.js\"",
-    "start": "node ./build/src/api/app.js",
+    "start": "ts-node src/api/app.ts",
     "build": "tsc -p . && cp -R resources/* build/",
     "apikey": "node ./build/src/core/config/apiKey list",
     "coursebook": "node ./build/src/batch/coursebook",
@@ -31,7 +31,8 @@
     "assert-rejects": "^0.1.1",
     "async": "~2.0.1",
     "async-retry": "^1.3.1",
-    "bcrypt": "~2.0.1",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "~1.18.3",
     "cookie-parser": "~1.4.3",
     "cors": "~2.8.4",
@@ -44,7 +45,7 @@
     "mocha": "~5.2.0",
     "module-alias": "^2.0.6",
     "mongodb": "~3.0.10",
-    "mongoose": "^5.0.18",
+    "mongoose": "^5.11.15",
     "morgan": "^1.9.1",
     "redis": "^2.8.0",
     "request": "^2.74.0",
@@ -53,6 +54,7 @@
     "sinon": "^6.1.3",
     "streamroller": "^0.8.5",
     "supertest": "~3.1.0",
+    "ts-node": "^9.1.1",
     "typescript": "2.9.1",
     "winston": "^3.2.0",
     "winston-daily-rotate-file": "^3.6.0",
