Dockerizing & Automatic Deployment & Seperate DB and Cache from Server (#115)
* docker-compose

* github actions

* dockerrun

* port 12000

* create snutt.yml by Choi-Hank idea

* echo

* fix typo

* snutt-server-production

* snutt-server-production

* port 3000

* update example

* Update to connect with redis

* Update to connect with redis

* make travis pass again

* remove docker-compose file

* master branch github actions

Co-authored-by: Hank Choi <zlzlqlzl1@naver.com>

--- a/snutt.yml.example
+++ b/snutt.yml.example
@@ -4,7 +4,7 @@ core:
   mongo:
     uri: mongodb://localhost/snutt
   redis:
-    port: 6379
+    url: redis://localhost
   fcm:
     apiKey: testapikey
     projectId: testprojectid
