Update EB environment name

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -58,7 +58,7 @@ jobs:
           --description dev-$BUILD_NUMBER \
           --source-bundle S3Bucket=$S3_BUCKET_NAME,S3Key='deploy-dev.zip'
         aws elasticbeanstalk update-environment \
-          --environment-name snutt-server-dev \
+          --environment-name snutt-server-development \
           --version-label $BUILD_NUMBER
 
     - name: Slack Notify
