--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -31,6 +31,7 @@ jobs:
 
     - name: Upload Dockerrun.aws.json to S3
       run: |
+        mv Dockerrun-dev.aws.json Dockerrun.aws.json
         zip deploy-dev.zip Dockerrun.aws.json
         aws s3 cp deploy-dev.zip s3://$S3_BUCKET_NAME/deploy-dev.zip
 
