--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "immutable": "~3.8.2",
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "~5.5.0",
+    "jwks-client": "^1.3.2",
     "mocha": "~5.2.0",
     "module-alias": "^2.0.6",
     "mongodb": "~3.0.10",
     "mongoose": "^5.0.18",
     "morgan": "^1.9.1",
+    "pem-jwk": "^2.0.0",
     "redis": "^2.8.0",
     "request": "^2.74.0",
     "request-promise-native": "~1.0.5",
