--- a/package.json
+++ b/package.json
@@ -41,13 +41,12 @@
     "immutable": "~3.8.2",
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "~5.5.0",
-    "jwks-client": "^1.3.2",
+    "jwk-to-pem": "^2.0.5",
     "mocha": "~5.2.0",
     "module-alias": "^2.0.6",
-    "mongodb": "~3.0.10",
-    "mongoose": "^5.0.18",
+    "mongodb": "^3.6.6",
+    "mongoose": "^5.12.7",
     "morgan": "^1.9.1",
-    "pem-jwk": "^2.0.0",
     "redis": "^2.8.0",
     "request": "^2.74.0",
     "request-promise-native": "~1.0.5",
