--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/mongoose": "^4.7.2",
     "@types/morgan": "^1.7.32",
     "@types/node": "^6.0.55",
+    "@types/pem-jwk": "^1.5.0",
     "@types/redis": "^2.8.6",
     "@types/request": "^2.0.0",
     "@types/request-promise-native": "~1.0.6",
@@ -41,12 +42,12 @@
     "immutable": "~3.8.2",
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "~5.5.0",
-    "jwk-to-pem": "^2.0.5",
     "mocha": "~5.2.0",
     "module-alias": "^2.0.6",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.7",
     "morgan": "^1.9.1",
+    "pem-jwk": "^2.0.0",
     "redis": "^2.8.0",
     "request": "^2.74.0",
     "request-promise-native": "~1.0.5",
