--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@types/mongoose": "^4.7.2",
     "@types/morgan": "^1.7.32",
     "@types/node": "^6.0.55",
-    "@types/pem-jwk": "^1.5.0",
     "@types/redis": "^2.8.6",
     "@types/request": "^2.0.0",
     "@types/request-promise-native": "~1.0.6",
@@ -44,8 +43,8 @@
     "jsonwebtoken": "~5.5.0",
     "mocha": "~5.2.0",
     "module-alias": "^2.0.6",
-    "mongodb": "^3.6.6",
-    "mongoose": "^5.12.7",
+    "mongodb": "~3.0.10",
+    "mongoose": "^5.0.18",
     "morgan": "^1.9.1",
     "pem-jwk": "^2.0.0",
     "redis": "^2.8.0",
