--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-MONGODB_URI=mongodb://localhost:27017
+MONGODB_HOST=mongodb://localhost:27017
 MONGODB_DATABASE_NAME=snutt
 MONGODB_USERNAME=snuttadmin
 MONGODB_PASSWORD=snuttpw
+
+REDIS_HOST=redis://localhost:6379/
