--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/platform-express": "^7.6.15",
+    "cache-manager": "^3.4.3",
+    "cache-manager-redis-store": "^2.0.0",
     "mongoose": "^5.12.8",
     "morgan": "^1.10.0",
     "reflect-metadata": "^0.1.13",
@@ -36,6 +38,7 @@
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
+    "@types/cache-manager": "^3.4.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/morgan": "^1.9.2",
