--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/platform-express": "^7.6.15",
+    "@types/bcrypt": "^5.0.0",
+    "@types/crypto-js": "^4.0.1",
     "@types/jsonwebtoken": "^8.5.1",
+    "bcrypt": "^5.0.1",
     "cache-manager": "^3.4.3",
     "cache-manager-redis-store": "^2.0.0",
+    "crypto-js": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.8",
     "morgan": "^1.10.0",
