Setup cron job to be registered in elastic beanstalk

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Upload Dockerrun.aws.json to S3
       run: |
-        zip deploy.zip Dockerrun.aws.json
+        zip -r deploy.zip Dockerrun.aws.json .ebextensions
         aws s3 cp deploy.zip s3://$S3_BUCKET_NAME/deploy.zip
 
     - name: Login to ECR
