--- a/.ebextensions/cron-leaderonly-linux.config
+++ b/.ebextensions/cron-leaderonly-linux.config
@@ -1,49 +1,9 @@
-###################################################################################################
-#### Copyright 2016 Amazon.com, Inc. or its affiliates. All Rights Reserved.
-####
-#### Licensed under the Apache License, Version 2.0 (the "License"). You may not use this file
-#### except in compliance with the License. A copy of the License is located at
-####
-####     http://aws.amazon.com/apache2.0/
-####
-#### or in the "license" file accompanying this file. This file is distributed on an "AS IS"
-#### BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
-#### License for the specific language governing permissions and limitations under the License.
-###################################################################################################
-
-packages:
-  yum:
-    jq: []
-
 files:
-  "/usr/local/bin/check_leader.sh":
-    mode: "000755"
-    owner: root
-    group: root
-    content: |
-      #!/bin/bash
-      INSTANCE_ID=`curl http://169.254.169.254/latest/meta-data/instance-id 2>/dev/null`
-      REGION=`curl -s http://169.254.169.254/latest/dynamic/instance-identity/document 2>/dev/null | jq -r .region`
-
-      # Find the Auto Scaling Group name from the Elastic Beanstalk environment
-      ASG=`aws ec2 describe-tags --filters "Name=resource-id,Values=$INSTANCE_ID" \
-          --region $REGION --output json | jq -r '.[][] | select(.Key=="aws:autoscaling:groupName") | .Value'`
-
-      # Find the first instance in the Auto Scaling Group
-      FIRST=`aws autoscaling describe-auto-scaling-groups --auto-scaling-group-names $ASG \
-          --region $REGION --output json | \
-          jq -r '.AutoScalingGroups[].Instances[] | select(.LifecycleState=="InService") | .InstanceId' | sort | head -1`
-
-      # If the instance ids are the same exit 0
-      [ "$FIRST" = "$INSTANCE_ID" ]
-
   "/usr/local/bin/cron_coursebook.sh":
     mode: "000755"
     owner: root
     group: root
     content: |
-      #!/bin/bash
-      /usr/local/bin/check_leader.sh || exit
       # Now run commands that should run on only 1 instance.
       CONTAINER=`sudo docker ps | awk '$1!="CONTAINER" {print $1}'`
       sudo docker exec $CONTAINER /usr/local/bin/node /app/build/src/batch/coursebook
@@ -54,10 +14,15 @@ files:
     owner: root
     group: root
     content: |
-      40 10 * * * root /usr/local/bin/cron_coursebook.sh
-      0 21 * * * root /usr/local/bin/cron_coursebook.sh
+      #40 10 * * * root /usr/local/bin/cron_coursebook.sh
+      #0 21 * * * root /usr/local/bin/cron_coursebook.sh
 
 commands:
   rm_old_cron:
     command: "rm -fr /etc/cron.d/cron_coursebook.bak"
     ignoreErrors: true
+
+container_commands:
+  001-uncomment-cron:
+    command: "sed -i -e 's/#//' /etc/cron.d/cron_coursebook"
+    leader_only: true
