--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,5 @@
     "strict": true,
     "strictPropertyInitialization": false
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "legacy"]
 }
