--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
       "json",
       "ts"
     ],
+    "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
