--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "bcrypt": "^5.0.1",
     "cache-manager": "^3.4.3",
     "cache-manager-redis-store": "^2.0.0",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "crypto-js": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.8",
