--- a/.ebextensions/cron-leaderonly-linux.config
+++ b/.ebextensions/cron-leaderonly-linux.config
@@ -9,8 +9,9 @@ files:
     group: root
     content: |
       #!/bin/bash
-      INSTANCE_ID=`curl http://169.254.169.254/latest/meta-data/instance-id 2>/dev/null`
-      REGION=`curl -s http://169.254.169.254/latest/dynamic/instance-identity/document 2>/dev/null | jq -r .region`
+      TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600" 2>/dev/null`
+      INSTANCE_ID=`curl -H "X-aws-ec2-metadata-token: $TOKEN" -v http://169.254.169.254/latest/meta-data/instance-id 2>/dev/null`
+      REGION=`curl -H "X-aws-ec2-metadata-token: $TOKEN" -s http://169.254.169.254/latest/dynamic/instance-identity/document 2>/dev/null | jq -r .region`
 
       # Find the Auto Scaling Group name from the Elastic Beanstalk environment
       ASG=`aws ec2 describe-tags --filters "Name=resource-id,Values=$INSTANCE_ID" \
