--- a/.github/workflows/test-dev.yml
+++ b/.github/workflows/test-dev.yml
@@ -5,8 +5,10 @@ name: CI
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the develop branch
-  pull_request:
+  push:
     branches: [ feature/SNUTT-150 ]
+  pull_request:
+    branches: [ develop ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
