--- a/.github/workflows/test-dev.yml
+++ b/.github/workflows/test-dev.yml
@@ -15,7 +15,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -25,7 +25,6 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: install node 8
         run: |
-          sudo apt-get install ca-certificates -y
           sudo apt install curl
           curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
           sudo apt-get install -y nodejs
