--- a/.github/workflows/test-dev.yml
+++ b/.github/workflows/test-dev.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: setup redis, mongodb
         run: |
-          docker-compose up
+          docker-compose up -d
           mv ./snutt.yml.example ./snutt.yml
 
       - name: install packages
