--- a/.github/workflows/test-dev.yml
+++ b/.github/workflows/test-dev.yml
@@ -27,6 +27,9 @@ jobs:
           curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
           sudo apt-get install -y nodejs
 
+      - name: check node version
+        run: node -v
+
       - name: setup redis, mongodb
         run: |
           docker-compose up -d
