--- a/.github/workflows/test-dev.yml
+++ b/.github/workflows/test-dev.yml
@@ -24,6 +24,7 @@ jobs:
       - name: install node 8
         run: |
           sudo apt install curl
+          sudo apt remove -y nodejs
           curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
           sudo apt-get install -y nodejs
 
