--- a/.github/workflows/test-dev.yml
+++ b/.github/workflows/test-dev.yml
@@ -8,27 +8,32 @@ on:
   pull_request:
     branches: [ develop ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  test:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a set of commands using the runners shell
-      - name: install node 8
+      - name: Setup node 8
+        uses: actions/setup-node@v1
+        with:
+          node-version: 8.x
+
+      - name: check node version
+        run: node -v
+
+      - name: setup redis, mongodb
         run: |
-          sudo apt install curl
-          curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
-          sudo apt install nodejs
+          docker-compose up -d
+          mv ./snutt.yml.example ./snutt.yml
+
+      - name: install packages
+        run: npm install
 
       - name: test
         run: yarn test
